2008-08-10  Badlop  <badlop@process-one.net>

	* src/msgs/eo.msg: Updated (thanks to Andreas van Cranenburgh)
	* src/msgs/nl.msg: Updated (thanks to Andreas van Cranenburgh)
	* src/msgs/sk.msg: Updated (thanks to Marek Becka)
	* src/msgs/sv.msg: Updated (thanks to Thore Alstromer and Heysan)

2008-08-09  Badlop  <badlop@process-one.net>

	* src/ejabberd_service.erl: Fix XEP-0114 compliance: define xmlns
	in header of error response; include in response the JID of served
	component not server (thanks to Sergei Golovan)(EJAB-717)

2008-08-04  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/odbc/ejabberd_odbc.erl: Restart the database connection when
	it's lost or it reaches timeout with MySQL. Set transaction isolation level
	to SERIALIZABLE when establishing connection to MySQL.

2008-08-01  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.2.txt: Added for ejabberd 2.0.2-beta1

	* src/web/ejabberd_http.erl: Temporary solution for check of
	packet size when HTTPS (EJAB-611)(EJAB-507)(EJAB-574)

2008-07-31  Badlop  <badlop@process-one.net>

	* src/msgs/uk.msg: Fix: each string in a single line
	* src/msgs/wa.msg: Likewise

	* src/msgs/es.msg: Fix typo
	* src/msgs/gl.msg: Likewise
	* src/msgs/pt-br.msg: Likewise

	* src/msgs/zh.msg: Fix some translations (thanks to Zhan Caibao)

	* src/msgs/ca.msg: Updated (thanks to Badlop)
	* src/msgs/cs.msg: Updated (thanks to Lukas Poliuvk)
	* src/msgs/de.msg: Updated (thanks to Nikolaus Polak)
	* src/msgs/es.msg: Updated (thanks to Badlop)
	* src/msgs/fr.msg: Updated (thanks to Christophe Romain)
	* src/msgs/it.msg: Updated (thanks to Luca Brivio)
	* src/msgs/ja.msg: Updated (thanks to Tsukasa Hamano)
	* src/msgs/no.msg: Updated (thanks to Stian B. Barmen)
	* src/msgs/pl.msg: Updated (thanks to Zbyszek Zolkiewski)
	* src/msgs/pt-br.msg: Updated (thanks to Otavio Fernandes)
	* src/msgs/ru.msg: Updated (thanks to Evgeniy Khramtsov)
	* src/msgs/tr.msg: Updated (thanks to Doruk Fisek)